Fixing broken css rule for a:hover - attempt #3

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -17,9 +17,10 @@ a {
     color: #2B65EC;
     text-decoration: none;
 }
+
 a:hover,a:focus {
     color: #343d46;
-    text-weight: normal;
+    font-weight: normal;
 }
 
 .nav-header {
